style.css
html {
    font-size: 20px;
}

body {
    margin: 0;
    padding: 0;
    height: 100vh;
    background-color: rgb(255, 255, 255);
    font-family: Arial, Helvetica, sans-serif;
}

.header {
    background-image: url("../My-Landing-Page/pics/bluehour.jpeg");
    background-position: center;
    background-repeat: none;
    background-size: cover;
    height: 340px;
    display: flex;
    flex-direction: column;
    flex-shrink: 0;
    justify-content: space-between;    
    background-color: rgb(236, 231, 213);
    padding: 1rem;
}

.header-top {
    display: flex;
    justify-content: space-between;
    /* font-style: italic; */
}

.header-content {
    display: flex;
    justify-content: space-between;
    align-items: center;
    color: white;
}

.header-text {
    font-size: 1.5rem;
    margin-left: 1rem;
}

.header-text .header-subtext {
    font-size: 0.85rem;
    width: 600px;
}

.header-button,
.signup {
    transition-duration: 0.4s;
    font-size: 0.75rem;
    padding: 0.75rem;
    border-radius: 0.5rem;
    border: none;
    background-color: white;
}

.header-button a,
.signup a {
    color: black;
}

.signup:hover,
.header-button:hover {
    background-color: rgb(206, 105, 254);
    color: white;
    cursor: pointer;
}

.profileimg {
    width: 250px;
    height: auto;
    border-radius: 0.5rem;
}

.logo {
    font-size: 3rem;
    color: rgb(255, 213, 0);
    margin-top: -0.5rem;
    font-style: italic;
    font-weight: 900;
}

.links,
.content-link,
.content-buttons {
    font-size: 1rem;
    display: flex;
    flex-flow: row nowrap;
    padding: 0;
    gap: 1rem;
    list-style-type: none;
}

a {
    color: rgb(255, 255, 255);
    text-decoration: none;
}

.content {
    display: flex;
    flex-direction: column;
    align-items: space-evenly;
    justify-content: center;
    height: auto;
    padding: 2rem;
    gap: 2rem;
    background-color: rgb(82, 4, 198);
}

.content-header {
    text-align: center;
    font-size: 1.5rem;
    font-style: italic;
    color: white;
}

.content-buttons {
    display: flex;
    justify-content: space-evenly;
    
}

.content-link {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 220px;
    line-height: 1rem;
    font-style: italic;
    color: white;
    background-color: transparent;
    border-color: transparent;    
}

.content-link p {
    font-size: 0.75rem;
}

.content-buttons .contentimg {
    height: 200px;
    border-radius: 0.5rem;
    gap: 3rem;
}

.quote-section {
    background-image: url("../My-Landing-Page/pics/vasquez.jpeg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
/* need to find a way to fade the img only */
    /*filter: opacity(50%); */
    display: flex;
    flex-shrink: 0;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    height: 350px;
    padding: 2rem;
}

/* .quote-background {

} */

.quote {
    width: 700px;
    padding-top: 100px;
    justify-content: center;
    align-items: center;    
    font-size: 1.58rem;
    color: rgb(255, 255, 255);
}

.action {
    display: flex;
    justify-content: center;
    align-items: center;
}

.action-content {
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-size: 1rem;
    line-height: 50%;
    background-color:rgb(255, 213, 0);
    border-radius: 0.5rem;
    padding: 1.5rem 2rem;
    margin: 6rem;
    gap: 25px;
}

.action-signup {
    display: flex;
    font-size: 0.65rem;
}

.footer {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 80px;
    color: white;
    background-color: rgb(175, 31, 31);
    font-size: 0.7rem;
}

